kubernetes/workers-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workers-deployment
  namespace: go-masterclass
spec:
  replicas: 1
  selector:
    matchLabels:
      module-name: workers-module
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        module-name: workers-module
    spec:
      containers:
      - image: ghcr.io/bogocvetkov/go_masterclass_with_k8s/workers:main
        name: workers-image
        # Testing with locally build images
        # imagePullPolicy: Never
        imagePullPolicy: Always
        securityContext:
          runAsUser: 1001
          runAsNonRoot: true
        resources:
           limits:
              cpu: 200m
              memory: 150Mi
           requests:
              cpu: 100m
              memory: 100Mi
      imagePullSecrets:
      - name: ghrc-auth
