kubernetes/api-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-srv
  namespace: go-masterclass
spec:
  selector:
    module-name: api-module
  ports:
  - port: 3000
    name: http
    targetPort: 3000
    protocol: TCP
  - port: 9000
    name: g-rpc
    targetPort: 9000
    protocol: TCP
  - port: 9001
    name: g-rpc-gateway
    targetPort: 9001
    protocol: TCP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: go-masterclass
spec:
  replicas: 1
  selector:
    matchLabels:
      module-name: api-module
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        module-name: api-module
    spec:
      containers:
      - image: ghcr.io/bogocvetkov/go_masterclass_with_k8s/api:main
        name: api-image
        # Testing with locally build images
        # imagePullPolicy: Never
        imagePullPolicy: Always
        securityContext:
          runAsUser: 1001
          runAsNonRoot: true
        ports:
          - containerPort: 3000
            protocol: TCP
          - containerPort: 9000
            protocol: TCP
          - containerPort: 9001
            protocol: TCP
        livenessProbe:
          httpGet:
            path: /ping
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 3
        readinessProbe:
          httpGet:
            path: /ping
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 3
        resources:
           limits:
              cpu: 200m
              memory: 150Mi
           requests:
              cpu: 100m
              memory: 100Mi
      imagePullSecrets:
      - name: ghrc-auth
