kubernetes/ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: go-masterclass
  name: go-masterclass-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: api-srv
            port:
              number: 3000
      - path: /gateway(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: api-srv
            port:
              number: 9001
